      - `-v|--verbose` for verbose logging (pretty logging otherwise)
    - Deprecated option
      -  `-p|--properties` in favor of `-c|--conf`
    - Configurable defaults for all CLI options
    - Generate HTML reports by default
  - Add alternative DSL for attaching files to report (without quotes around name)
    - `I attach "<filepath>" as <name>`
  - New user documentation
    - At Gwen home page here: https://gweninterpreter.org/

2.34.6
======
Nov 2, 2021
- Remove trailing commas in JSON report gwen-interpreter/gwen-web#86

2.34.5
======
Oct 11, 2021
- Fix RP heartbeat timeout issue gwen-interpreter/gwen-web#85:
  - Close input stream after reading RP heartbeat response.
  - Keep retrying failed RP heartbeats until configured timeout expires

2.35.4
======
Oct 7, 2021
- Close input stream after reading RP heartbeat response

2.34.3
======
Sep 8, 2021
- Improved CLI usage text
- Update Gwen core from v2.34.3 to v[2.34.4](https://github.com/gwen-interpreter/gwen/releases/tag/v2.34.4)
  - Console banner fix

2.34.2
======
July 29, 2021
- Improved usage (--help) text
- Issue gwen-interpreter/gwen-web#79: resolve attributes in examples tables
- Fix parallel scenario-level execution for Gherkin's spoken languages/dialects

2.34.1
======
July 31, 2021
- Default `gwen.rp.send.annotations` setting to false

2.34.0
======
July 2, 2021
- Add new DSLs to support invoking system processes with quoted strings and other special cases
  - I execute system process "<process>" delmited by "<delimiter>"
  - I execute a unix system process "<process>" delmited by "<delimiter>"
  - <attribute> <is|will be> defined by system process "<expression>" delmited by "<delimiter>"
- Support passing DocStrings as parameters to StepDefs (addresses issue gwen-interpreter/gwen#60)
- Update report portal client-java from v5.0.21 to v5.0.22
  - Long name trunctation fix

2.33.0
======
June 22, 2021
- Report portal integration release